Fix wrapper padding on mobile

--- a/css/global.scss
+++ b/css/global.scss
@@ -15,6 +15,13 @@ $themecolor: #33a0a4;
 }
 
 /* Global bottom margin */
+@media only screen and (max-width:1016px) {
+    .wrapper {
+        padding-left:1em;
+        padding-right:1em;
+    }
+}
+
 body {
     margin-bottom: 2em;
 }
@@ -34,6 +41,7 @@ h1 {
     font-weight: 400;
     font-size: 2em;
     color: $themecolor;
+    padding-bottom:1em;
 }
 
 h2 {
@@ -41,6 +49,7 @@ h2 {
     font-weight: 300;
     font-size: 1.5em;
     color: $themecolor;
+    padding-bottom:1em;
 }
 
 h3 {
@@ -49,4 +58,15 @@ h3 {
     font-style: italic;
     font-size: 1.5em;
     color: $themecolor;
+    padding-bottom:1em;
+}
+
+/* Default paragraph styles */
+p {
+    font-family: 'Open Sans', Helvetica, sans-serif;
+    font-weight:300;
+    font-size: 1.2em;
+    line-height:2em;
+    color: #000;
+    padding-bottom:1em;
 }
