--- a/css/ui/nav.scss
+++ b/css/ui/nav.scss
@@ -13,6 +13,7 @@
 
 .logo img {
     padding:0.8em;
+    padding-left:0;
     width:4em;
 }
 
@@ -89,7 +90,7 @@ Styles for screen 767px and lower
 */
 
 /*Styles for screen 515px and lower*/
-@media only screen and (max-width : 600px) {
+@media only screen and (max-width : 610px) {
 
     .logo {
         display:none;
@@ -116,6 +117,7 @@ Styles for screen 767px and lower
     nav a#pull img {
         width:4em;
         padding: 0.8em;
+        padding-left:0;
         padding-top:1em; 
     }
     nav a:hover {
